# EconMind-Matrix

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
backend/: .env.example  alignment_api.py  database.py  main.py
dataset/: README.md  aligned_corpus_20251230.jsonl  quality_report.md  statistics.json
docs/: api.md  architecture.md  proposal.md
frontend/: .env.production  vite.config.js
frontend/src/: App.vue
layer2-policy/: requirements.txt
layer2-policy/backend/: __init__.py  alignment.py  api.py  database.py  models.py  pdf_parser.py
layer2_policy/backend/: alignment.py  api.py  database.py  models.py
layer3-sentiment/: requirements.txt
layer3-sentiment/annotation/: llm_annotator.py
layer3-sentiment/crawler/: news_crawler.py
layer3_sentiment/: requirements.txt
layer3_sentiment/analysis/: __init__.py  trend_analysis.py
layer3_sentiment/annotation/: __init__.py  doccano_export.py  llm_annotator.py
layer3_sentiment/backend/: __init__.py  api.py  database.py  models.py
layer3_sentiment/crawler/: __init__.py  news_crawler.py
layer3_sentiment/tests/: README.md  test_workflow.py
layer4_alignment/: README.md  __init__.py  requirements.txt  test_layer4.py
layer4_alignment/backend/: __init__.py  alignment_engine.py  data_loader.py  knowledge_cell.py
layer4_alignment/config/: alignment_config.yaml  augmentation_config.yaml
layer4_alignment/scripts/: cross_lingual_augmentor.py  incremental_update.py  run_full_alignment.py  validate_output.py
scripts/: export_dataset.py
shared/: README.md  __init__.py  config.py  errors.py  schema.py  utils.py
tests/: test_unified_api.py
(+28 files in other folders)
